--- a/qanda/qanda_app/templates/new_answer.html
+++ b/qanda/qanda_app/templates/new_answer.html
@@ -1,4 +1,6 @@
 {% block answer %}
+{% load i18n %}
+
 <div class="span6">
 	<form method="post" action="{{ action_link }}">
 		{% csrf_token %}	
@@ -10,13 +12,13 @@
 	        {{ answer_form.text.errors }}
 	        <label for="id_text">
 	        	<h5>
-		        	Answer:
+		        	{% trans "Answer" %}:
 		        </h5>
 	        </label> 
 	        {{ answer_form.text }}
 		</div>
 
-	<input class="btn" type="submit" value="Submit" />
+	<input class="btn" type="submit" value="{% trans 'Submit' %}" />
 	</form>
 </div>
 {% endblock %}
