--- a/qanda/qanda_app/templates/question.html
+++ b/qanda/qanda_app/templates/question.html
@@ -1,7 +1,8 @@
 {% extends "qanda_base.html" %}
+{% load i18n %}
 
 {% block head %}
-	<title> {{ question.title }} </title>
+	<title> {{ SITE_NAME}} - {{ question.title }} </title>
 {% endblock %}
 
 {% block body %}
@@ -12,7 +13,7 @@
 			<div class="question">
 				<div class="row">
 					<div class="pull-left">
-						<a href="relate_single/upvote/{% if question.relations.upvote %}false{%else%}true{% endif %}" class="btn {% if question.relations.upvote %} active {% endif %}"><i class="icon-arrow-up"></i>&nbsp;&nbsp;Up&nbsp;&nbsp;&nbsp;</a>
+						<a href="relate_single/upvote/{% if question.relations.upvote %}false{%else%}true{% endif %}" class="btn {% if question.relations.upvote %} active {% endif %}"><i class="icon-arrow-up"></i>&nbsp;&nbsp;{% trans "Up" %}&nbsp;&nbsp;&nbsp;</a>
 						<br/>
 						<h4 class="text-center">
 							{% if question.numOfVotes > 0 %}
@@ -21,13 +22,13 @@
 								{{ question.numOfVotes }}
 							{% endif %}
 						</h4>
-						<a href="relate_single/downvote/{% if question.relations.downvote %}false{%else%}true{% endif %}" class="btn {% if question.relations.downvote %} active {% endif %}"><i class="icon-arrow-down"></i>Down</a>
+						<a href="relate_single/downvote/{% if question.relations.downvote %}false{%else%}true{% endif %}" class="btn {% if question.relations.downvote %} active {% endif %}"><i class="icon-arrow-down"></i>{% trans "Down" %}</a>
 					</div>
 					<div class="span8">
 						<h2> {{ question.title }} - {{ question.viewCount }} </h2> 
 						{% if question.author.djangoUser == user %}
 						<div class="span6">
-							<a class="edit-question" href="{% url edit_question_page question_id=question.pk %}">Edit Question</a>
+							<a class="edit-question" href="{% url edit_question_page question_id=question.pk %}">{% trans "Edit Question" %}</a>
 						</div>
 						{% endif %}
 					</div>
@@ -37,8 +38,8 @@
 				</div>
 				<div class="row">
 					<div class="span6">
-						by <i><a href="{{ question.author.get_absolute_url }}">{{ question.author }}</a></i> <br />
-						submitted {{ question.postDate }} <br />
+						{% trans "by" %}: <i><a href="{{ question.author.get_absolute_url }}">{{ question.author }}</a></i> <br />
+						{{ question.postDate }} <br />
 					</div>
 					<div class="span3">
 						{% include "subscription.html" with pk=question.pk type="question_subscription" action_link="subscribe/" subscribed=question.subscribed %}
@@ -59,22 +60,22 @@
 					<div class="span2 question-star-flag">
 						<a href="relate_single/star/{% if question.relations.star %}false{%else%}true{% endif %}" class="btn {% if question.relations.star %} active {% endif %}">
 							{% if question.relations.star %}
-								<i class="icon-star"></i> Starred
+								<i class="icon-star"></i> {% trans "Starred" %}
 							{% else %}									
-								<i class="icon-star-empty"></i> Star
+								<i class="icon-star-empty"></i> {% trans "Star" %}
 							{% endif %}
 						</a>
 						<br/>
 						<br/>
 						<a href="relate_single/flag/{% if question.relations.flag %}false{%else%}true{% endif %}" class="btn {% if question.relations.flag %} active {% endif %}">
-							<i class="icon-flag"></i> Flag
+							<i class="icon-flag"></i> {% trans "Flag" %}
 						</a>
 					</div>
 				</div>
 				<div class="row">
 					<div class="span8">
 						<ul>
-							Tags:
+							{% trans "Tags" %}:
 							{% for tag in question.tags.all %}
 								<a href="{% url qanda_app.views.tag_page tag=tag.name page="0" %}">{{ tag.name }},</a>
 							{% endfor %}
@@ -84,9 +85,9 @@
 				<div class="row">
 					<div class="span8 question-useful">
 						<h6>
-							Have you found this question useful?
-							<a href="relate_single/useful/{% if question.relations.useful %}false{%else%}true{% endif %}" class="btn {% if question.relations.useful %} active {% endif %}">Yes</a>
-							<a href="relate_single/notUseful/{% if question.relations.notUseful %}false{%else%}true{% endif %}" class="btn {% if question.relations.notUseful %} active {% endif %}">No</a>
+							{% trans "Have you found this question useful?" %}
+							<a href="relate_single/useful/{% if question.relations.useful %}false{%else%}true{% endif %}" class="btn {% if question.relations.useful %} active {% endif %}">{% trans "Yes" %}</a>
+							<a href="relate_single/notUseful/{% if question.relations.notUseful %}false{%else%}true{% endif %}" class="btn {% if question.relations.notUseful %} active {% endif %}">{% trans "No" %}</a>
 						</h6>
 					</div>
 				</div>
@@ -105,7 +106,7 @@
 				<p>
 					<div class="row">
 						<div class="pull-left">
-							<a href="{{ answer.pk }}/upvote/{% if answer.relations.upvote %}false{%else%}true{% endif %}" class="btn {% if answer.relations.upvote %} active {% endif %}"><i class="icon-arrow-up"></i>&nbsp;&nbsp;Up&nbsp;&nbsp;&nbsp;</a>
+							<a href="{{ answer.pk }}/upvote/{% if answer.relations.upvote %}false{%else%}true{% endif %}" class="btn {% if answer.relations.upvote %} active {% endif %}"><i class="icon-arrow-up"></i>&nbsp;&nbsp;{% trans "Up" %}&nbsp;&nbsp;&nbsp;</a>
 							<br/>
 							<h4 class="text-center">
 								{% if answer.numOfVotes > 0 %}
@@ -114,7 +115,7 @@
 									{{ answer.numOfVotes }}
 								{% endif %}
 							</h4>
-							<a href="{{ answer.pk }}/downvote/{% if answer.relations.downvote %}false{%else%}true{% endif %}" class="btn {% if answer.relations.downvote %} active {% endif %}"><i class="icon-arrow-down"></i>Down</a>
+							<a href="{{ answer.pk }}/downvote/{% if answer.relations.downvote %}false{%else%}true{% endif %}" class="btn {% if answer.relations.downvote %} active {% endif %}"><i class="icon-arrow-down"></i>{% trans "Down" %}</a>
 						</div>
 						<div class="span7">
 							<blockquote>
@@ -124,15 +125,15 @@
 						<div class="pull-right answer-star-flag">
 							<a href="{{ answer.pk }}/star/{% if answer.relations.star %}false{%else%}true{% endif %}" class="btn {% if answer.relations.star %} active {% endif %}">
 								{% if answer.relations.star %}
-									<i class="icon-star"></i> Starred
+									<i class="icon-star"></i> {% trans "Starred" %}
 								{% else %}									
-									<i class="icon-star-empty"></i> Star
+									<i class="icon-star-empty"></i> {% trans "Star" %}
 								{% endif %}
 							</a>
 							<br/>
 							<br/>
 							<a href="{{ answer.pk }}/flag/{% if answer.relations.flag %}false{%else%}true{% endif %}" class="btn {% if answer.relations.flag %} active {% endif %}">
-								<i class="icon-flag"></i> Flag
+								<i class="icon-flag"></i> {% trans "Flag" %}
 							</a>
 						</div>
 						<!-- <div class="span1">
@@ -141,9 +142,9 @@
 					</div>
 					<div class="row">
 						<div class="span5 offset1">
-							by <i><a href="{{ answer.author.get_absolute_url }}">{{ answer.author }}</a></i>
+							{% trans "by" %}: <i><a href="{{ answer.author.get_absolute_url }}">{{ answer.author }}</a></i>
 							{% if answer.author.djangoUser == user %}
-								<a class="edit-answer pull-right" href="{% url delete_answer answer_id=answer.pk %}">Delete Answer</a>
+								<a class="edit-answer pull-right" href="{% url delete_answer answer_id=answer.pk %}">{% trans "Delete Answer" %}</a>
 							{% endif %}
 						</div>
 						<div class="span1">
@@ -153,9 +154,9 @@
 					<div class="row answer-useful">
 						<div class="span5 offset1">
 							<h6>
-								Have you found this answer useful?
-								<a href="{{ answer.pk }}/useful/{% if answer.relations.useful %}false{%else%}true{% endif %}" class="btn {% if answer.relations.useful %} active {% endif %}">Yes</a>
-								<a href="{{ answer.pk }}/notUseful/{% if answer.relations.notUseful %}false{%else%}true{% endif %}" class="btn {% if answer.relations.notUseful %} active {% endif %}">No</a>
+								{% trans "Have you found this answer useful?" %}
+								<a href="{{ answer.pk }}/useful/{% if answer.relations.useful %}false{%else%}true{% endif %}" class="btn {% if answer.relations.useful %} active {% endif %}">{% trans "Yes" %}</a>
+								<a href="{{ answer.pk }}/notUseful/{% if answer.relations.notUseful %}false{%else%}true{% endif %}" class="btn {% if answer.relations.notUseful %} active {% endif %}">{% trans "No" %}</a>
 							</h6>
 						</div>
 					</div>
@@ -166,7 +167,7 @@
 								<div class="span6 offset2">
 									<hr>
 									{{ reply.text }} <br />
-									by <i><a href="{{ reply.author.get_absolute_url }}">{{ reply.author }}</a></i> <br />
+									{% trans "by" %} <i><a href="{{ reply.author.get_absolute_url }}">{{ reply.author }}</a></i> <br />
 								</div>
 								{% endif %}
 							</div>
@@ -179,7 +180,7 @@
 							{% if user.is_authenticated %}
 								{% include "reply.html" with pk=answer.pk type="new_reply" action_link="relate/" %}
 							{% else %}
-								<a href="{% url qanda_app.views.login_redirect request.path %}">Login to reply</a>
+								<a href="{% url qanda_app.views.login_redirect request.path %}">{% trans "Login to reply" %}</a>
 							{% endif %}
 						</div>
 					</div>
@@ -190,7 +191,7 @@
 			{% endfor %}
 
 			<div class="row">
-				<h3> Answer this question </h3>
+				<h3> {% trans "Answer this question" %} </h3>
 
 				{% include "new_answer.html" with type="new_answer" action_link="relate/" %}
 			</div>
