--- a/qanda/qanda_app/templates/question_listing_base.html
+++ b/qanda/qanda_app/templates/question_listing_base.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 
 <div class="span10">
 	{% for question in questions %}
@@ -5,13 +6,13 @@
 			<div class="span10">
 				<a href="{% url qanda_app.views.question_page question_id=question.pk %}">
 					<div class="span1 votecount-box">
-						Votes<br />{{ question.voteCount }}
+						{% trans "Votes" %}<br />{{ question.voteCount }}
 					</div>
 					<div class="span1 answercount-box">
-						Answers<br />{{ question.answers.count }}
+						{% trans "Answers" %}<br />{{ question.answers.count }}
 					</div>	
 					<div class="span1 viewcount-box">
-						Views<br />{{ question.viewCount }}
+						{% trans "Views" %}<br />{{ question.viewCount }}
 					</div>	
 					<div class="span6 question-box">
 							<span class="title">
@@ -28,7 +29,7 @@
 							</span>
 						{% endif %}
 						<span class="questioninfo pull-right">
-							<a class="questioninfo pull-right" href="{{ question.author.get_absolute_url }}">{{ question.postDate }} by {{ question.author }} </a>
+							<a class="questioninfo pull-right" href="{{ question.author.get_absolute_url }}">{{ question.postDate }} {% trans "by" %} {{ question.author }} </a>
 						</span>
 					</div>	
 				</a>
