--- a/qanda/qanda_app/templates/relations.html
+++ b/qanda/qanda_app/templates/relations.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 {% comment %}
 
 Parameters:
@@ -15,13 +17,13 @@ Parameters:
 		{% csrf_token %}
 		<input type="hidden" name="pk" value="{{ pk }}">
 		<input type="hidden" name="type" value="{{ type }}">
-				<label><input type="checkbox" id="upvote{{pk}}" name="upvote" value="Upvote" {% if relations.upvote %} checked {% endif %} onclick="checkUncheck('upvote{{pk}}', 'downvote{{pk}}');"> Upvote</label>
-				<label><input type="checkbox" id="downvote{{pk}}" name="downvote" value="Downvote" {% if relations.downvote %} checked {% endif %} onclick="checkUncheck('downvote{{pk}}', 'upvote{{pk}}');"> Downvote</label>
-				<label><input type="checkbox" id="useful{{pk}}" name="useful" value="Useful" {% if relations.useful %} checked {% endif %} onclick="checkUncheck('useful{{pk}}', 'notUseful{{pk}}');"> Useful</label>
-				<label><input type="checkbox" id="notUseful{{pk}}" name="notUseful" value="NotUseful" {% if relations.notUseful %} checked {% endif %} onclick="checkUncheck('notUseful{{pk}}', 'useful{{pk}}');"> Not Useful</label>
-				<label><input type="checkbox" name="star" value="Star" {% if relations.star %} checked {% endif %}> Star</label>
-				<label><input type="checkbox" name="flag" value="Flag" {% if relations.flag %} checked {% endif %}> Flag</label>
-			<input class="btn" type="submit" value="Submit">
+				<label><input type="checkbox" id="upvote{{pk}}" name="upvote" value="Upvote" {% if relations.upvote %} checked {% endif %} onclick="checkUncheck('upvote{{pk}}', 'downvote{{pk}}');"> {% trans "Upvote" %}</label>
+				<label><input type="checkbox" id="downvote{{pk}}" name="downvote" value="Downvote" {% if relations.downvote %} checked {% endif %} onclick="checkUncheck('downvote{{pk}}', 'upvote{{pk}}');"> {% trans "Downvote" %}</label>
+				<label><input type="checkbox" id="useful{{pk}}" name="useful" value="Useful" {% if relations.useful %} checked {% endif %} onclick="checkUncheck('useful{{pk}}', 'notUseful{{pk}}');"> {% trans "Useful" %}</label>
+				<label><input type="checkbox" id="notUseful{{pk}}" name="notUseful" value="NotUseful" {% if relations.notUseful %} checked {% endif %} onclick="checkUncheck('notUseful{{pk}}', 'useful{{pk}}');"> {% trans "Not Useful" %}</label>
+				<label><input type="checkbox" name="star" value="Star" {% if relations.star %} checked {% endif %}> {% trans "Star" %}</label>
+				<label><input type="checkbox" name="flag" value="Flag" {% if relations.flag %} checked {% endif %}> {% trans "Flag" %}</label>
+			<input class="btn" type="submit" value="{% trans 'Submit' %}">
 	</form>
 </div>
 
