--- a/qanda/qanda_app/templates/tag_list.html
+++ b/qanda/qanda_app/templates/tag_list.html
@@ -1,7 +1,8 @@
 {% extends "qanda_base.html" %}
+{% load i18n %}
 
 {% block head %}
-	<title> Qanda </title>
+	<title> {{ SITE_NAME }} - {% trans "Tag List" %} </title>
 {% endblock %}
 
 {% block body %}
@@ -10,10 +11,10 @@
 
 	{{ debug }}
 	<h3>
-		Tags
+		{% trans "Tags" %}
 	</h3>
 	<h5>
-		in alphabetical order
+		{% trans "in alphabetical order" %}
 	</h5>
 	<div class="row">
 		<div class="span10">
@@ -25,7 +26,11 @@
 										#{{ tag }}
 									</a>
 									<span class="tag-list-used">
-									  - used {{ tag.count }} time{{ tag.count|pluralize }}
+									{% blocktrans count counter=tag.count %}
+									  - used {{ counter }} time
+									{% plural %}
+									  - used {{ counter }} times
+									{% endblocktrans %}
 									</span>
 								</div>	
 					{% endfor %}
@@ -39,17 +44,17 @@
 			<div class="pagination pagination-large text-center">
 			  <ul>
 				{% if prev or prev == 0 %}
-			    	<li class=""><a href="{% url qanda_app.views.tag_list page=prev %}">Prev</a></li>
+			    	<li class=""><a href="{% url qanda_app.views.tag_list page=prev %}">{% trans "Prev" %}</a></li>
 		    	{% else %}
-			    	<li class="disabled"><a href="#">Prev</a></li>
+			    	<li class="disabled"><a href="#">{% trans "Prev" %}</a></li>
 				{% endif %}
 					
 					<li class="disabled"><a href="#">_______________________</a></li>
 
 				{% if next %}
-			    	<li class=""><a href="{% url qanda_app.views.tag_list page=next %}">Next</a></li>
+			    	<li class=""><a href="{% url qanda_app.views.tag_list page=next %}">{% trans "Next" %}</a></li>
 			    {% else %}
-			    	<li class="disabled"><a href="#">Next</a></li>
+			    	<li class="disabled"><a href="#">{% trans "Next" %}</a></li>
 				{% endif %}
 			  </ul>
 			</div>
