--- a/qanda/qanda_app/templates/qanda/profile.html
+++ b/qanda/qanda_app/templates/qanda/profile.html
@@ -1,4 +1,4 @@
-{% extends "qanda_base.html" %}
+{% extends "qanda/qanda_base.html" %}
 {% load i18n %}
 
 {% block head %}
@@ -316,7 +316,7 @@
 
 		</div>
 
-		{% include "righthand_tags.html" %}
+		{% include "qanda/righthand_tags.html" %}
 		
 	</div>
 
