--- a/qanda/qanda_app/templates/qanda/category_list.html
+++ b/qanda/qanda_app/templates/qanda/category_list.html
@@ -1,4 +1,4 @@
-{% extends "qanda_base.html" %}
+{% extends "qanda/qanda_base.html" %}
 {% load i18n %}
 
 {% block head %}
@@ -56,7 +56,7 @@
 			</div>
 		</div>
 
-		{% include "righthand_tags.html" %}
+		{% include "qanda/righthand_tags.html" %}
 
 	</div>
 
