--- a/qanda/qanda_app/templates/qanda/question.html
+++ b/qanda/qanda_app/templates/qanda/question.html
@@ -1,4 +1,4 @@
-{% extends "qanda_base.html" %}
+{% extends "qanda/qanda_base.html" %}
 {% load i18n %}
 
 {% block head %}
@@ -42,7 +42,7 @@
 						{{ question.postDate }} <br />
 					</div>
 					<div class="span3">
-						{% include "subscription.html" with pk=question.pk type="question_subscription" action_link="subscribe/" subscribed=question.subscribed %}
+						{% include "qanda/subscription.html" with pk=question.pk type="question_subscription" action_link="subscribe/" subscribed=question.subscribed %}
 					</div>
 				</div>
 				<div class="row">
@@ -55,7 +55,7 @@
 						</blockquote>
 					</div>
 					<!-- <div class="span2">
-						{% include "relations.html" with relations=question.relations pk=question.pk type="question" action_link="relate/" %}
+						{% include "qanda/relations.html" with relations=question.relations pk=question.pk type="question" action_link="relate/" %}
 					</div> -->
 					<div class="span2 question-star-flag">
 						<a href="relate_single/star/{% if question.relations.star %}false{%else%}true{% endif %}" class="btn {% if question.relations.star %} active {% endif %}">
@@ -137,7 +137,7 @@
 							</a>
 						</div>
 						<!-- <div class="span1">
-							{% include "relations.html" with relations=answer.relations pk=answer.pk type="answer" action_link="relate/" %} <br />
+							{% include "qanda/relations.html" with relations=answer.relations pk=answer.pk type="answer" action_link="relate/" %} <br />
 						</div> -->
 					</div>
 					<div class="row">
@@ -148,7 +148,7 @@
 							{% endif %}
 						</div>
 						<div class="span1">
-							{% include "subscription.html" with pk=answer.pk type="answer_subscription" action_link="subscribe/" subscribed=answer.subscribed %}
+							{% include "qanda/subscription.html" with pk=answer.pk type="answer_subscription" action_link="subscribe/" subscribed=answer.subscribed %}
 						</div>
 					</div>
 					<div class="row answer-useful">
@@ -193,11 +193,11 @@
 			<div class="row">
 				<h3> {% trans "Answer this question" %} </h3>
 
-				{% include "new_answer.html" with type="new_answer" action_link="relate/" %}
+				{% include "qanda/new_answer.html" with type="new_answer" action_link="relate/" %}
 			</div>
 		</div>
 
-		{% include "righthand_tags.html" %}
+		{% include "qanda/righthand_tags.html" %}
 
 	</div>
 
