--- a/qanda/qanda_app/templates/qanda/tag_page.html
+++ b/qanda/qanda_app/templates/qanda/tag_page.html
@@ -1,4 +1,4 @@
-{% extends "qanda_base.html" %}
+{% extends "qanda/qanda_base.html" %}
 {% load i18n %}
 
 {% block head %}
@@ -39,9 +39,9 @@
 			<p></p>
 		</div>
 		
-		{% include "question_listing_base.html" %}
+		{% include "qanda/question_listing_base.html" %}
 
-		{% include "righthand_tags.html" %}
+		{% include "qanda/righthand_tags.html" %}
 
 	</div>
 	
